# ms2-retrieval

./: .flake8  .gitignore  README.md  pyproject.toml
ms2_retrieval/: main.py
scripts/: encode.sh
tests/: test_retrieval.py
